@@ -23,13 +23,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.12.0'
-    implementation 'commons-net:commons-net:3.9.0'
+    implementation 'org.apache.commons:commons-dbcp2:2.13.0'
+    implementation 'commons-net:commons-net:3.10.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'jaxen:jaxen:2.0.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
-    implementation 'org.springframework:spring-jdbc:6.2.4'
+    implementation 'org.springframework:spring-jdbc:6.2.5'
     implementation 'xom:xom:1.3.9'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
